--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
+html {
+  scroll-snap-type: y mandatory;
+}
+.app__videos {
+  position: relative;
+  height: 800px;
+  overflow: scroll;
+  width: 80%;
+  border-radius: 20px;
+  max-width: 500px;
+  scroll-snap-type: y mandatory;
+}
+.app {
+  background-color: rgb(133, 119, 119);
+  height: 100vh;
+  display: grid;
+  place-items: center;
+}
+/* Dont use overflow hidden to close scroll bar it will remove scroll n snap functionality
+so use the below code instead */
+
+/* Hide scrollbar for Chrome , Safari and Opera */
+.app__videos::-webkit-scrollbar {
+  display: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Hide scroll bar for IE, Edge and Firefox */
+.app__videos {
+  -ms-overflow-style: none; /* IE n Edge */
+  scrollbar-width: none; /* Firefox */
 }
